--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,7 +1,6 @@
 <!Doctype html>
-<div >
-  <h1>    Dating Application </h1>
-  <hr>
-  <app-value></app-value>
+<app-nav></app-nav>
+<h1>Dating App</h1>
 
-</div>
+
+
