--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -60,7 +60,7 @@
           </tab>
 
           <tab heading="Messages">
-            <h4>Messages wil go here</h4>
+            <app-member-messages [recipientId]="user.id"></app-member-messages>
 
 
           </tab>
