--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -23,23 +23,20 @@
   </div>
 
   <div class="form-group">
-      <input [ngClass]="{'is-invalid': registerForm.get('knownAs')?.errors && registerForm.get('knownAs').touched}" class="form-control"
+      <input [ngClass]="{'is-invalid': registerForm.get('knownAs').errors && registerForm.get('knownAs').touched}" class="form-control"
         placeholder="Known as" formControlName="knownAs">
-      <div class="invalid-feedback" *ngIf="registerForm.get('knownAs').touched && registerForm.get('knownAs')?.hasError('required')">Known as is required</div>
+      <div class="invalid-feedback" *ngIf="registerForm.get('knownAs').touched && registerForm.get('knownAs').hasError('required')">Known as is required</div>
     </div>
-
 
     <div class="form-group">
-      <input [ngClass]="{'is-invalid': registerForm.get('dateOfBirth')?.errors && registerForm.get('dateOfBirth').touched}" class="form-control"
-    this.bsConfig = {
-        placeholder="Date of Birth" formControlName="dateOfBirth" type="text" bsDatepicker [bsConfig]="bsConfig" >
-      <div class="invalid-feedback" *ngIf="registerForm.get('dateOfBirth').touched && registerForm.get('dateOfBirth')?.hasError('required')">Date of Birth is required</div>
-    </div>
-
+        <input [ngClass]="{'is-invalid': registerForm.get('dateOfBirth').errors && registerForm.get('dateOfBirth').touched}" class="form-control"
+          placeholder="Date of Birth" formControlName="dateOfBirth" type="text" bsDatepicker [bsConfig]="bsConfig">
+        <div class="invalid-feedback" *ngIf="registerForm.get('dateOfBirth').touched && registerForm.get('dateOfBirth').hasError('required')">Date of Birth is required</div>
+      </div>
 
       <div class="form-group">
           <input [ngClass]="{'is-invalid': registerForm.get('city').errors && registerForm.get('city').touched}" class="form-control"
-           placeholder="City" formControlName="city">
+            placeholder="City" formControlName="city">
           <div class="invalid-feedback" *ngIf="registerForm.get('city').touched && registerForm.get('city').hasError('required')">City is required</div>
         </div>
 
