--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -54,15 +54,13 @@
           </tab>
 
           <tab heading="Photos">
-            <ngx-gallery [options]="galleryoptions" [images]="galleryimages"></ngx-gallery>
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
 
 
           </tab>
 
           <tab heading="Messages">
             <app-member-messages [recipientId]="user.id"></app-member-messages>
-
-
           </tab>
 
         </tabset>
